Fix div hierarchy for alignment

--- a/styles.css
+++ b/styles.css
@@ -17,18 +17,23 @@ li, p{
 }
 
 #title {
+    /* for debug */
+    border: 1px red solid; 
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#body {
+#paraContainer {
+    /* for debug */
+    border: 1px red solid;
     display: flex;
     flex-direction: column;
-    padding-left: 250px;
 }
 
 #learningPaths {
+    /* for debug */
+    border: 1px red solid;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -36,5 +41,7 @@ li, p{
 
 .boxes {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
 }
